# dontyoudare

./: .gitignore  Cargo.toml
src/: broadcast.rs  cam.rs  lib.rs  signals.rs  telegram.rs
src/camera/: handler.rs  matdiff.rs  mod.rs
src/camera/motion/: mod.rs  motion.rs  state.rs  state_recording_idle.rs  state_recording_motion.rs  state_watching.rs  writer.rs
src/config/: conf.rs  config.rs  cv.rs  mod.rs  types.rs
src/config/types/: color.rs  fourcc.rs  mod.rs  point.rs  size.rs  threshold.rs
src/cv/: mod.rs
src/cv/imgproc/: blur.rs  conv.rs  cvt_color.rs  dilate.rs  draw.rs  find.rs  mod.rs  traits.rs  treshold.rs
src/cv/imgproc/contours/: draw.rs  mod.rs
src/cv/videoio/: mod.rs  writer.rs
