[package]
name = "tracker"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "main"
path = "src/bin/main.rs"

[lib]
name = "ropencv"
path = "src/lib.rs"
crate-type = ["lib"]


[dependencies]
opencv = "0.74.0"
thiserror = "1.0.37"
anyhow = "1.0.66"
chrono = "0.4.23"
log = "0.4.17"
simplelog = "0.12.0"
crossbeam-channel = "0.5.6"
teloxide = { version="0.11.2", optional=true, features = ["macros"]  }
tokio = { version =  "1.8", features = ["rt-multi-thread", "macros"] }

serde = { version="1.0.147", features=["derive"] }
toml = { version = "0.5.9" }
regex = { version="1.7.0" }
